--- a/dein.toml
+++ b/dein.toml
@@ -1,5 +1,5 @@
 [[plugins]]
-repo = 'w0rp/ale'
+repo = 'Shougo/dein.vim'
 hook_post_update = '''
   " エラー行に表示するマーク
   let g:ale_sign_error = '⨉'
@@ -41,6 +41,9 @@ repo = 'jiangmiao/auto-pairs'
 
 [[plugins]]
 repo = 'davidhalter/jedi-vim'
+
+[[plugins]]
+repo = 'w0rp/ale'
 
 [[plugins]]
 repo = 'Vimjas/vim-python-pep8-indent'
