--- a/dein.toml
+++ b/dein.toml
@@ -1,8 +1,8 @@
 [[plugins]]
 repo = 'jiangmiao/auto-pairs'
 
-[[plugins]]
-repo = 'davidhalter/jedi-vim'
+#[[plugins]]
+#repo = 'davidhalter/jedi-vim'
 
 [[plugins]]
 repo = 'Vimjas/vim-python-pep8-indent'
@@ -42,7 +42,23 @@ hook_post_update = '''
 
 [[plugins]]
 repo = 'Shougo/deoplete.nvim'
-hook_add = 'let g:deoplete#enable_at_startup = 1'
+#hook_add = 'let g:deoplete#enable_at_startup = 1'
+hook_add = '''
+	" Use deoplete.
+	let g:deoplete#enable_at_startup = 1
+	" Use smartcase.
+	call deoplete#custom#option('smart_case', v:true)
+
+	" <C-h>, <BS>: close popup and delete backword char.
+	inoremap <expr><C-h> deoplete#smart_close_popup()."\<C-h>"
+	inoremap <expr><BS>  deoplete#smart_close_popup()."\<C-h>"
+
+	" <CR>: close popup and save indent.
+	inoremap <silent> <CR> <C-r>=<SID>my_cr_function()<CR>
+	function! s:my_cr_function() abort
+	  return deoplete#close_popup() . "\<CR>"
+  endfunction
+'''
 
 [[plugins]]
 repo = 'cespare/vim-toml'
