--- a/dein.toml
+++ b/dein.toml
@@ -2,6 +2,9 @@
 repo = 'jiangmiao/auto-pairs'
 
 [[plugins]]
+repo = 'python-rope/ropevim'
+
+[[plugins]]
 repo = 'majutsushi/tagbar'
 
 [[plugins]]
@@ -13,6 +16,12 @@ hook = '''
 
 [[plugins]]
 repo = 'w0rp/ale'
+hook_add = '''
+  let g:ale_fixers= {
+  \   'python': ['autopep8', 'black'],
+  \}
+
+'''
 hook = '''
   " エラー行に表示するマーク
   let g:ale_sign_error = '⨉'
@@ -36,9 +45,6 @@ hook = '''
   let g:ale_open_list = 0
   let g:ale_keep_list_window_open = 0
   
-  let b:ale_fixers = {
-  \ 'python' : ['autopep8'],
-  \}
   " 有効にするlinter
   let g:ale_linters = {
   \   'python': ['autopep8'],
