--- a/dein.toml
+++ b/dein.toml
@@ -2,6 +2,9 @@
 repo = 'jiangmiao/auto-pairs'
 
 [[plugins]]
+repo = 'tpope/vim-surround'
+
+[[plugins]]
 repo = 'python-rope/ropevim'
 
 [[plugins]]
