--- a/dein.toml
+++ b/dein.toml
@@ -96,8 +96,12 @@ hook_post_update = '''
 
 [[plugins]]
 repo = 'thinca/vim-quickrun'
-hook_post_update = '''
+hook_add= '''
   let g:quickrun_config = {'*': {'hook/time/enable': '1'},}
+  let g:quickrun_config.tex = {
+            \   'command' : 'preview_tex',
+            \ }
+  nnoremap <Leader>q :<C-u>bw! \[quickrun\ output\]<CR>
 '''
 
 [[plugins]]
