--- a/dein.toml
+++ b/dein.toml
@@ -1,4 +1,10 @@
 [[plugins]]
+repo = 'lervag/vimtex'
+
+[[plugins]]
+repo = 'mattn/emmet-vim'
+
+[[plugins]]
 repo = 'jiangmiao/auto-pairs'
 
 [[plugins]]
@@ -6,6 +12,12 @@ repo = 'tpope/vim-surround'
 
 [[plugins]]
 repo = 'python-rope/ropevim'
+
+[[plugins]]
+repo = 'idanarye/vim-vebugger'
+
+[[plugins]]
+repo = 'Shougo/vimproc'
 
 [[plugins]]
 repo = 'majutsushi/tagbar'
@@ -20,6 +32,8 @@ hook = '''
 [[plugins]]
 repo = 'w0rp/ale'
 hook_add = '''
+  let g:ale_python_flake8_executable = 'python3'
+  let g:ale_python_flake8_options = '-m flake8'
   let g:ale_fixers= {
   \   'python': ['autopep8', 'black'],
   \}
@@ -72,6 +86,9 @@ repo = 'thinca/vim-quickrun'
 
 [[plugins]]
 repo = 'zchee/deoplete-jedi'
+hook_add = '''
+    let g:deoplete#sources#jedi#show_docstring = 1
+'''
 
 [[plugins]]
 repo = 'airblade/vim-gitgutter'
