--- a/dein.toml
+++ b/dein.toml
@@ -11,6 +11,9 @@ repo = 'jiangmiao/auto-pairs'
 repo = 'tpope/vim-surround'
 
 [[plugins]]
+repo = 'tpope/vim-fugitive'
+
+[[plugins]]
 repo = 'python-rope/ropevim'
 
 [[plugins]]
