--- a/dein.toml
+++ b/dein.toml
@@ -88,9 +88,6 @@ hook = '''
 repo = 'Vimjas/vim-python-pep8-indent'
 
 [[plugins]]
-repo = 'thinca/vim-quickrun'
-
-[[plugins]]
 repo = 'zchee/deoplete-jedi'
 hook_add = '''
     let g:deoplete#sources#jedi#show_docstring = 1
@@ -120,7 +117,17 @@ hook_post_update = '''
 [[plugins]]
 repo = 'thinca/vim-quickrun'
 hook_add= '''
-  let g:quickrun_config = {'*': {'hook/time/enable': '1'},}
+  let g:quickrun_config = {
+      \ '*': {'hook/time/enable': '1'},
+      \ '_': {
+          \ 'runner': 'vimproc',
+          \ 'runner/vimproc/updatetime': 40,
+          \ 'outputter': 'error',
+          \ 'outputtter/error/success': 'buffer',
+          \ 'outputtter/error/error': 'quickfix',
+          \ 'outputtter/buffer/split': 'botright 8sp',
+      \ },
+  \ }
   let g:quickrun_config.tex = {
             \   'command' : 'preview_tex',
             \ }
