--- a/dein.toml
+++ b/dein.toml
@@ -44,40 +44,26 @@ hook = '''
 [[plugins]]
 repo = 'w0rp/ale'
 hook_add = '''
-  let g:ale_python_flake8_executable = 'python3'
+  let g:ale_python_flake8_executable = g:python3_host_prog
   let g:ale_python_flake8_options = '-m flake8'
   let g:ale_fixers= {
   \   'python': ['autopep8', 'black'],
   \}
-
-'''
-hook = '''
-  " エラー行に表示するマーク
-  let g:ale_sign_error = '⨉'
-  let g:ale_sign_warning = '⚠'
-  " エラー行にカーソルをあわせた際に表示されるメッセージフォーマット
-  let g:ale_echo_msg_format = '[%linter%] %s [%severity%]'
-  " エラー表示の列を常時表示
-  let g:ale_sign_column_always = 1
+  let g:ale_linters = {
+  \   'python': ['flake8'],
+  \}
   
-  " ファイルを開いたときにlint実行
+  let g:ale_echo_msg_format = '[%linter%]%code% %s'
+  
+  " Enable when open
   let g:ale_lint_on_enter = 1
-  " ファイルを保存したときにlint実行
   let g:ale_lint_on_save = 1
-  " 編集中のlintはしない
-  let g:ale_lint_on_text_changed = 'never'
-  
   " lint結果をロケーションリストとQuickFixには表示しない
   " 出てると結構うざいしQuickFixを書き換えられるのは困る
   let g:ale_set_loclist = 0
   let g:ale_set_quickfix = 0
   let g:ale_open_list = 0
   let g:ale_keep_list_window_open = 0
-  
-  " 有効にするlinter
-  let g:ale_linters = {
-  \   'python': ['autopep8'],
-  \}
   
   " ALE用プレフィックス
   nmap [ale] <Nop>
@@ -86,9 +72,6 @@ hook = '''
   nmap <silent> [ale]<C-P> <Plug>(ale_previous)
   nmap <silent> [ale]<C-N> <Plug>(ale_next)
 '''
-
-#[[plugins]]
-#repo = 'davidhalter/jedi-vim'
 
 [[plugins]]
 repo = 'Vimjas/vim-python-pep8-indent'
@@ -169,55 +152,22 @@ repo = 'vim-airline/vim-airline-themes'
 [[plugins]]
 repo = 'Shougo/denite.nvim'
 hook_add = '''
-  " Denite用プレフィックス
-  nmap [denite] <Nop>
-  map <C-j> [denite]
-  
-  " プロジェクト内のファイル検索
-  nmap <silent> [denite]<C-P> :<C-u>Denite file_rec -highlight-mode-insert=Search<CR>
-  " バッファに展開中のファイル検索
-  nmap <silent> [denite]<C-B> :<C-u>Denite buffer -highlight-mode-insert=Search<CR>
-  " ファイル内の関数/クラス等の検索
-  nmap <silent> [denite]<C-O> :<C-u>Denite outline -highlight-mode-insert=Search<CR>
-  " dotfiles配下をカレントにしてfile_rec起動
-  nmap <silent> [denite]<C-V> :<C-u>call denite#start([{'name': 'file_rec', 'args': ['~/.dotfiles']}]) -highlight-mode-insert=Search=Search<CR>
-  
-  " 上下移動を<C-N>, <C-P>
-  call denite#custom#map('normal', '<C-N>', '<denite:move_to_next_line>')
-  call denite#custom#map('normal', '<C-P>', '<denite:move_to_previous_line>')
-  call denite#custom#map('insert', '<C-N>', '<denite:move_to_next_line>')
-  call denite#custom#map('insert', '<C-P>', '<denite:move_to_previous_line>')
-  " 入力履歴移動を<C-J>, <C-K>
-  call denite#custom#map('insert', '<C-J>', '<denite:assign_next_text>')
-  call denite#custom#map('insert', '<C-K>', '<denite:assign_previous_text>')
-  " 横割りオープンを`<C-S>`
-  call denite#custom#map('insert', '<C-S>', '<denite:do_action:split>')
-  " 縦割りオープンを`<C-I>`
-  call denite#custom#map('insert', '<C-I>', '<denite:do_action:vsplit>')
-  " タブオープンを`<C-O>`
-  call denite#custom#map('insert', '<C-O>', '<denite:do_action:tabopen>')
-  
-  " file_rec検索時にfuzzymatchを有効にし、検索対象から指定のファイルを除外
-  call denite#custom#source(
-      \ 'file_rec', 'matchers', ['matcher_fuzzy', 'matcher_project_files', 'matcher_ignore_globs'])
-  
-  " 検索対象外のファイル指定
-  call denite#custom#filter('matcher_ignore_globs', 'ignore_globs',
-      \ [ '.git/', '.ropeproject/', '__pycache__/',
-      \   'venv/', 'images/', '*.min.*', 'img/', 'fonts/'])
-
-  " use floating window if possible
-  let s:denite_win_width_percent = 0.85
-  let s:denite_win_height_percent = 0.7
-
-  " Change denite default options
-  call denite#custom#option('default', {
-      \ 'split': 'floating',
-      \ 'winwidth': float2nr(&columns * s:denite_win_width_percent),
-      \ 'wincol': float2nr((&columns - (&columns * s:denite_win_width_percent)) / 2),
-      \ 'winheight': float2nr(&lines * s:denite_win_height_percent),
-      \ 'winrow': float2nr((&lines - (&lines * s:denite_win_height_percent)) / 2),
-  \ })
+    " Define mappings
+    autocmd FileType denite call s:denite_my_settings()
+    function! s:denite_my_settings() abort
+      nnoremap <silent><buffer><expr> <CR>
+      \ denite#do_map('do_action')
+      nnoremap <silent><buffer><expr> d
+      \ denite#do_map('do_action', 'delete')
+      nnoremap <silent><buffer><expr> p
+      \ denite#do_map('do_action', 'preview')
+      nnoremap <silent><buffer><expr> q
+      \ denite#do_map('quit')
+      nnoremap <silent><buffer><expr> i
+      \ denite#do_map('open_filter_buffer')
+      nnoremap <silent><buffer><expr> <Space>
+      \ denite#do_map('toggle_select').'j'
+    endfunction
 '''
 
 [[plugins]]
