--- a/dein.toml
+++ b/dein.toml
@@ -8,6 +8,10 @@ hook_add = '''
 repo = 'mattn/emmet-vim'
 
 [[plugins]]
+repo = 'neoclide/coc.nvim'
+rev = 'release'
+
+[[plugins]]
 repo = 'jiangmiao/auto-pairs'
 
 [[plugins]]
@@ -71,12 +75,6 @@ hook_add = '''
 repo = 'Vimjas/vim-python-pep8-indent'
 
 [[plugins]]
-repo = 'deoplete-plugins/deoplete-jedi'
-hook_add = '''
-    let g:deoplete#sources#jedi#show_docstring = 1
-'''
-
-[[plugins]]
 repo = 'airblade/vim-gitgutter'
 
 [[plugins]]
@@ -106,25 +104,6 @@ hook_add= '''
             \   'command' : 'preview_tex',
             \ }
   nnoremap <Leader>q :<C-u>bw! \[quickrun\ output\]<CR>
-'''
-
-[[plugins]]
-repo = 'Shougo/deoplete.nvim'
-hook_add = '''
-	" Use deoplete.
-	let g:deoplete#enable_at_startup = 1
-	" Use smartcase.
-	call deoplete#custom#option('smart_case', v:true)
-
-	" <C-h>, <BS>: close popup and delete backword char.
-	inoremap <expr><C-h> deoplete#smart_close_popup()."\<C-h>"
-	inoremap <expr><BS>  deoplete#smart_close_popup()."\<C-h>"
-
-	" <CR>: close popup and save indent.
-	inoremap <silent> <CR> <C-r>=<SID>my_cr_function()<CR>
-	function! s:my_cr_function() abort
-	  return deoplete#close_popup() . "\<CR>"
-  endfunction
 '''
 
 [[plugins]]
