--- a/dein.toml
+++ b/dein.toml
@@ -43,7 +43,7 @@ hook = '''
 repo = 'w0rp/ale'
 hook_add = '''
   let g:ale_python_flake8_executable = g:python3_host_prog
-  let g:ale_python_flake8_options = '-m flake8'
+  let g:ale_python_flake8_options = '-m flake8 --ignore=E501,E302, E701'
   let g:ale_fixers= {
   \   'python': ['autopep8', 'black'],
   \}
