--- a/dein.toml
+++ b/dein.toml
@@ -10,6 +10,21 @@ repo = 'mattn/emmet-vim'
 [[plugins]]
 repo = 'neoclide/coc.nvim'
 rev = 'release'
+hook_add = '''
+    nmap <silent> gd <Plug>(coc-definition)
+    nmap <silent> gy <Plug>(coc-type-definition)
+    nmap <silent> gi <Plug>(coc-implementation)
+    nmap <silent> gr <Plug>(coc-references)
+    nnoremap <silent> K :call <SID>show_documentation()<CR>
+
+    function! s:show_documentation()
+      if (index(['vim','help'], &filetype) >= 0)
+        execute 'h '.expand('<cword>')
+      else
+        call CocAction('doHover')
+      endif
+    endfunction
+'''
 
 [[plugins]]
 repo = 'jiangmiao/auto-pairs'
