--- a/dein.toml
+++ b/dein.toml
@@ -121,6 +121,9 @@ hook_add= '''
             \   'command' : 'preview_tex',
             \ }
   nnoremap <Leader>q :<C-u>bw! \[quickrun\ output\]<CR>
+
+  " <Leader>t for the quick quick run. don't show the quick run result.
+  nnoremap <Leader>t :QuickRun<CR>:<C-u>bw! \[quickrun\ output\]<CR>
 '''
 
 [[plugins]]
