added js support

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,8 @@
 {
     "python.jediEnabled": false,
     "python.venvPath": "~/.config/nvim/env",
+    "tsserver.enableJavascript": true,
+    "eslint.filetypes": [
+        "javascript", "typescript", "typescriptreact", "javascriptreact", "typescript.tsx"
+    ]
 }
