added a new plugin 'vim-easy-align' for alignment

--- a/dein.toml
+++ b/dein.toml
@@ -8,6 +8,9 @@ hook_add = '''
 repo = 'tpope/vim-dispatch'
 
 [[plugins]]
+repo = 'junegunn/vim-easy-align'
+
+[[plugins]]
 repo = 'mattn/emmet-vim'
 
 [[plugins]]
