--- a/dein.toml
+++ b/dein.toml
@@ -9,6 +9,10 @@ repo = 'tpope/vim-dispatch'
 
 [[plugins]]
 repo = 'junegunn/vim-easy-align'
+hook_add = '''
+    " Start interactive EasyAlign in visual mode (e.g. vipga)
+    xmap ga <Plug>(EasyAlign)
+'''
 
 [[plugins]]
 repo = 'mattn/emmet-vim'
