--- a/dein.toml
+++ b/dein.toml
@@ -3,7 +3,10 @@ repo = 'jeffkreeftmeijer/vim-numbertoggle'
 
 [[plugins]]
 repo = 'janko/vim-test'
+depends = ['vim-dispatch']
 hook_add = '''
+    let g:test#strategy = 'dispatch'
+
     nmap <Space>t [vim-test]
     nmap [vim-test] <Nop>
     nmap [vim-test]n :TestNearest<CR>
@@ -12,6 +15,9 @@ hook_add = '''
     nmap [vim-test]l :TestLast<CR>
     nmap [vim-test]v :TestVisit<CR>
 '''
+
+[[plugins]]
+repo = 'aliev/vim-compiler-python'
 
 [[plugins]]
 repo = 'lervag/vimtex'
@@ -132,33 +138,36 @@ repo = 'scrooloose/nerdtree'
 
 [[plugins]]
 repo = 'Shougo/vimproc.vim'
-hook_post_update = '''
-  if dein#util#_is_windows()
-    let cmd = 'tools\\update-dll-mingw'
-  elseif dein#util#_is_cygwin()
-    let cmd = 'make -f make_cygwin.mak'
-  elseif executable('gmake')
-    let cmd = 'gmake'
-  else
-    let cmd = 'make'
-  endif
-  let g:dein#plugin.build = cmd
-'''
+build = 'make'
 
 [[plugins]]
 repo = 'thinca/vim-quickrun'
 hook_add= '''
-  let g:quickrun_config = {
+  let g:quickrun_config = get(g:, 'quickrun_config', {})
+  let g:quickrun_config._ = {
+            \   'runner': 'vimproc',
+            \   'outputter' : 'error',
+            \   'outputter/error/success' : 'buffer',
+            \   'outputter/error/error'   : 'quickfix',
+            \   'outputter/buffer/split'  : ':rightbelow 8sp',
+            \   'outputter/buffer/close_on_empty' : 1,
+  \ }
+  let g:quickrun_config.python = {
   \ }
   let g:quickrun_config.tex = {
             \   'command' : 'preview_tex',
-            \ }
-  nnoremap <Leader>q :<C-u>bw! \[quickrun\ output\]<CR>
+  \ }
+  let g:quickrun_config["nooutput"] = {
+            \   'outputter' : 'error',
+            \   'outputter/error/success' : 'null',
+            \   'outputter/error/error'   : 'quickfix',
+  \}
 
-  command! -bar CloseQuickRunOutput bw! \[quickrun\ output\]
-  " <Leader>t for the quick quick run. don't show the quick run result.
-  nnoremap <Leader>t :QuickRun<CR>:CloseQuickRunOutput<CR>
-  command! -bar RunWithouOutput call quickrun#run()|CloseQuickRunOutput
+  command! -bar CloseQuickRunOutput ccl | silent! bw! \[quickrun\ output\]
+  command! -bar RunWithouOutput call quickrun#run(g:quickrun_config.nooutput)
+
+  nnoremap <Leader>q :CloseQuickRunOutput<CR>
+  nnoremap <Leader>t :RunWithouOutput<CR>
 '''
 
 [[plugins]]
