--- a/dein.toml
+++ b/dein.toml
@@ -3,9 +3,8 @@ repo = 'jeffkreeftmeijer/vim-numbertoggle'
 
 [[plugins]]
 repo = 'janko/vim-test'
-depends = ['vim-dispatch']
 hook_add = '''
-    let g:test#strategy = 'dispatch'
+    let g:test#strategy = 'neovim'
 
     nmap <Space>t [vim-test]
     nmap [vim-test] <Nop>
@@ -141,33 +140,33 @@ repo = 'Shougo/vimproc.vim'
 build = 'make'
 
 [[plugins]]
-repo = 'thinca/vim-quickrun'
+repo = 'yoshihikoueno/vim-quickrun'
 hook_add= '''
   let g:quickrun_config = get(g:, 'quickrun_config', {})
   let g:quickrun_config._ = {
-            \   'runner': 'vimproc',
-            \   'outputter' : 'error',
-            \   'outputter/error/success' : 'buffer',
-            \   'outputter/error/error'   : 'quickfix',
-            \   'outputter/buffer/split'  : ':rightbelow 8sp',
-            \   'outputter/buffer/close_on_empty' : 1,
-  \ }
-  let g:quickrun_config.python = {
+            \   'runner': 'terminal',
+            \   'runner/terminal/opener': "botright new \[quickrun\ output\]",
   \ }
   let g:quickrun_config.tex = {
             \   'command' : 'preview_tex',
   \ }
+  let g:quickrun_config.python = {
+            \   'command' : 'python3',
+  \ }
   let g:quickrun_config["nooutput"] = {
-            \   'outputter' : 'error',
-            \   'outputter/error/success' : 'null',
-            \   'outputter/error/error'   : 'quickfix',
+            \   'runner/terminal/opener': "tabnew \[quickrun\ output\]",
+  \}
+  let g:quickrun_config["sticky"] = {
+            \   'runner/terminal/closeonsuccess': 0,
   \}
 
-  command! -bar CloseQuickRunOutput ccl | silent! bw! \[quickrun\ output\]
+  command! -bar CloseQuickRunOutput ccl | execute Close_terminal() | silent! bw! \[quickrun\ output\]
   command! -bar RunWithouOutput call quickrun#run(g:quickrun_config.nooutput)
+  command! -bar RunSticky call quickrun#run(g:quickrun_config.sticky)
 
   nnoremap <Leader>q :CloseQuickRunOutput<CR>
   nnoremap <Leader>t :RunWithouOutput<CR>
+  nnoremap <Leader>R :RunSticky<CR>
 '''
 
 [[plugins]]
