modified criteria to identify the project root dir

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,5 @@
 {
     "python.jediEnabled": false,
     "python.venvPath": "~/.config/nvim/env",
+    "coc.preferences.rootPatterns": [".vim","env",".hg",".projections.json","git"]
 }
